# unit-conversion

./: .gitattributes  README.md  create_list_of_nums.py  dummy.tsv  main.py  numbers.py  numbers.tsv  nums_1to122.tsv  pyproject.toml  requirements.txt  setup.cfg  units.py  utils.py  vegferd.txt
currencies/: Gjaldmiðlar - Sheet4.csv  currency.txt  out  out2  script.py
generate_numbers/: fill_in.tsv  fill_in_fractions  fractions.tsv  numbers.py  numbers.tsv  nums.py  nums_1to122.tsv  small_test.tsv
input/: .gitattributes  21_int.tsv  fractions_  fractions_0.tsv  fractions_0_10.tsv  fractions_0_100_repeated.tsv  fractions_1.tsv  integers_0_1000.tsv  ints_1.tsv  ints_1_10.tsv  ints_1_999999_first_1000_repeated.tsv  main_numbers.tsv  numbers.tsv
src/unitconversion/: __init__.py  main.py  main_prev.py  sentences.py  units.py  utils.py
tests/: test_fractions.py  test_ints.py
