[metadata]
name = unitconversion
version = 0.0.12
author = David Erik Mollberg
author_email = tiro@tiro.is
description = A package to generate sentences
url =https://gitlab.com/tiro-is/h10/unit-conversion
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
